# ogl-starter

./: .env  CMakeLists.txt  README.md
resources/shaders/solidTriangle/: vertex.glsl
src/: main.cpp
src/glHelpers/utils/getResourcePaths/: getResourcePaths.cpp
src/triangeExamples/solidColor/: SolidColorTriangle.cpp  SolidColorTriangle.hpp
